meetup/force-app/main/default/objects/MeetupRegistration__c/MeetupRegistration__c.object-meta.xml
<CustomObject>
    <label>Meetup Registration</label>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetup Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>