meetup/force-app/main/default/objects/MeetupRegistration__c/fields/Meetup__c.field-meta.xml
<CustomField>
    <fullName>Meetup__c</fullName>
    <description>The meetup record with which the registration is associated.</description>
    <label>Meetup</label>
    <referenceTo>Meetup__c</referenceTo>
    <relationshipLabel>Meetup Registrations</relationshipLabel>
    <relationshipName>Meetup_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>